# foamclient

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
foamclient/: __init__.py  client.py  deserializer.py  redis_client.py  redis_clients.py  redis_consumer.py  redis_producer.py  schema_registry.py  serializer.py  zmq_client.py  zmq_clients.py  zmq_consumer.py
foamclient/tests/: conftest.py  test_client.py  test_redis_client.py  test_redis_clients.py  test_redis_consumer.py  test_serializer.py  test_zmq_client.py  test_zmq_clients.py
